# adapter-for-api

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  settings.py  utils.py
.github/workflows/: python-app.yml
database/: connection.py  models.py  repository.py  schemas.py
routers/: insight.py  jira.py  main.py
services/: connection.py  insight.py  jira.py  repository_factories.py  schemas.py
services/atlassian_adapters/: unit_factory.py
services/atlassian_adapters/connections/: base.py  inner.py
services/atlassian_adapters/insight/: formatters.py  unit.py
services/atlassian_adapters/jira/: unit.py
services/connections/: auth_connection.py  base.py  connection.py  inner.py  insight_api_connection.py  jira_api_connection.py  mars_connection.py  utils.py
services/database/: connection.py  models.py
services/insight/: connection.py  insight.py
services/insight/connections/: api_connerction.py  connection.py  mars_connection.py
services/insight_repository/: formatters.py  repository.py
services/jira/: jira.py  schemas.py
services/jira/connections/: api_connection.py  connection.py
services/jira_repository/: repository.py
services/schemas/: insight_schemas.py  jira_schemas.py
tests/: fixtures.py  test_connection.py  test_insight_crud.py  test_main.py
tests/test_endpoints/: test_endpoints.py
tests/test_services/: test_insight.py  test_insight_hooks.py  test_insight_mars.py  test_jira.py  test_others.py
